Bug 1255379 - fix getCSSValuesForProperty for clip and clip-path; r=xidorn

This fixes getCSSValuesForProperty for clip and clip-path.

Although clip is deprecated, it seemed harmless to fix it as well;
when it is removed this code will also be readily found and removed.

It wasn't clear to me if setting the keyword table for clip-path in
nsCSSPropList.h would be ok, so I added a special case in
InspectorUtils.

MozReview-Commit-ID: Ghawr17HjKk